--- a/01-js/package.json
+++ b/01-js/package.json
@@ -13,6 +13,11 @@
     "test-expenditure-analysis": "npx jest ./tests/expenditure-analysis.test.js",
     "test-palindrome": "npx jest ./tests/palindrome.test.js",
     "test-todo-list": "npx jest ./tests/todo-list.test.js",
+    "test-blog-post": "npx jest ./tests/blogPost.test.js",
+    "test-count-vowels": "npx jest ./tests/countVowels.test.js",
+    "test-drawing-board": "npx jest ./tests/drawingBoard.test.js",
+    "test-find-largest-element": "npx jest ./tests/findLargestElement.test.js",
+    "test-reverse-words": "npx jest ./tests/reverseWords.test.js",
     "test-all": "npx jest ./tests/"
   },
   "keywords": [],
